$Id: ChangeLog,v 1.100 2004/11/10 21:16:22 andete Exp $

2004-11-10 Joost Yervante Damad <joost@lumatec.be>
	* debian packaging is working
	* make configurable:
		- default openmsx binary location
		- default openmsx system share dir location
		- creation of the desktop entries can be disabled

2004-11-06 Joost Yervante Damad <joost@lumatec.be>
	* make it possible to disable symlink for install
	* removed some ^M's from AUTHORS file

2004-11-06 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Removed all hard loopends used in combination with static arrays to
	  avoid problem with adding or removing elements in those arrays (e.g.
	  the media types).

2004-11-06 Manuel Bilderbeek <manuel@msxnet.org>
	* Removed all .Cas stuff, and replaced it by two cassetteplayer
	  controls, which still need to be made functional. Thanks to Herman
	  for finding some bugs. See his commit of today :)
	* Internally renamed all Tape(1) stuff to Cassette
	* Some layout tweaks (mainly esthetical) and added tool tip
	* Made Rewind and Force Play buttons functional
	* Disable Cassette stuff when there's no cassette port in the running
	  machine; disable buttons when there's no cassette selected
	  TODO: the controls get disabled briefly (during silent launch) and
	  then get enabled again if the port is found... Fix it if you can! ;)
	* Fixed initial enabled-state of buttons, depending on CassetteComboBox

2004-10-16 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed a problem with inserting a disk while openMSX is running.
	* Fixed a problem with change focus and diskb (value from
	   diska was taken instead of diskb).

2004-10-11 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Paths are now saved as soon as the openMSX config dialog
	   is closed.

2004-10-10 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed printerport plugin mechanism.
	* Instead of using LaunchMode, every openMSX reply
	   is linked to a handler-target. This can be either the